<resources>
    //strings
    <string name="app_name">aperto</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyDW8rIdBNAkID0f7i470vAcZihh3vn8oeI</string>
    <string name="user_name">John Nielsen</string>
    <string name="add_new_spot_choose_category">Choose category</string>
    <string name="add_new_spot_description_title">Description (optional)</string>
    <string name="add_new_spot_add_photo_title">Add photo</string>
    <string name="add_new_spot_rating_title">Rating</string>
    <string name="add_new_spot_title">Title</string>
    <string name="add_new_spot_title_prompt">E.g. Fælledparken</string>
    <string name="add_new_spot_submit_btn">Add spot</string>
    <string name="filter_button">Filter</string>
    <string name="icon8_title">Icons8</string>
    <string name="google_title">Google Material icons</string>
    <string name="icon8_link">https://icons8.com/</string>
    <string name="google_link">https://design.google.com/icons/</string>
    <string name="developers_title">Developers</string>
    <string name="credits_title">Credits</string>
    <string name="favourite_title">Favourites</string>
    <string name="detail_desc_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
    eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>
